# haskell_llm_benchmark

./: .gitignore  CLAUDE.md  README.md  flake.nix  requirements.txt  tmp.requirements.txt
benchmark/: benchmark.py  docker.sh  summarize_benchmark.py  summarize_results.py
benchmark-result/report-2025-04-03-18-10-47/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-03-18-12-57/: summary_table.md
benchmark-result/report-2025-04-03-18-13-53/: summary_table.csv
benchmark-result/report-2025-04-03-18-28-43/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-03-18-33-35/: summary_table.csv  summary_table.md
benchmark-result/report-2025-04-04-09-43-33/: summary_table.csv
benchmark-result/report-2025-04-04-09-44-47/: summary_table.md
benchmark-result/report-2025-04-04-09-56-48/: summary_table.md
benchmark-result/report-2025-04-04-10-05-19/: summary_table.csv
benchmark-result/report-2025-04-04-10-24-12/: summary_table.csv
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/acronym/: acronym.cabal
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/acronym/src/: Acronym.hs
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/affine-cipher/: package.yaml
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/bob/: bob.cabal
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/bob/src/: Bob.hs
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/etl/: etl.cabal
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/etl/src/: ETL.hs
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/isogram/: isogram.cabal
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/isogram/src/: Isogram.hs
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/parallel-letter-frequency/: package.yaml
tmp.benchmarks/2025-04-02-23-13-21--gpt-4o-full-run-final/haskell/exercises/practice/wordy/: package.yaml
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/acronym/: acronym.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/acronym/src/: Acronym.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/allergies/: Allergies.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/alphametics/: Alphametics.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/armstrong-numbers/: package.yaml
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/bank-account/: BankAccount.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/binary/: Binary.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/bob/: bob.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/bob/src/: Bob.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/bowling/: Bowling.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/darts/: Darts.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/diamond/: diamond.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/diamond/src/: Diamond.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/dominoes/: Dominoes.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/game-of-life/: package.yaml
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/grains/: package.yaml
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/lens-person/: Person.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/luhn/: Luhn.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/matching-brackets/: Brackets.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/nth-prime/: nth-prime.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/nth-prime/src/: Prime.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/ocr-numbers/: OCR.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/parallel-letter-frequency/: Frequency.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/pig-latin/: pig-latin.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/pig-latin/src/: PigLatin.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/sgf-parsing/: sgf-parsing.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/sgf-parsing/src/: Sgf.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/spiral-matrix/: spiral-matrix.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/spiral-matrix/src/: Spiral.hs
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/wordy/: wordy.cabal
tmp.benchmarks/2025-04-02-23-49-26--gemini-2.0-full-run-final/haskell/exercises/practice/wordy/src/: WordProblem.hs
tmp.benchmarks/2025-04-03-08-58-15--gpt-4o-mini-full-run-final/haskell/exercises/practice/isogram/: isogram.cabal
tmp.benchmarks/2025-04-03-08-58-15--gpt-4o-mini-full-run-final/haskell/exercises/practice/isogram/src/: Isogram.hs
(+680 files in other folders)
