cabal-version:       >=1.10
name:                bob
version:             1.4.0.10
-- synopsis:
-- description:
-- license:
-- license-file:
author:              Author name here
maintainer:          example@example.com
-- copyright:
category:            Category
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  exposed-modules:     Bob
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  build-depends:       base >=4.7 && <5,
                       bob,
                       hspec
  default-language:    Haskell2010
