cabal-version:       >=1.10
name:                isogram
version:             1.7.0.8
build-type:          Simple

library
  exposed-modules:     Isogram
  hs-source-dirs:      src
  build-depends:       base >=4.7 && <5,
                       text >=1.2.5.0
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  build-depends:       base >=4.7 && <5,
                       isogram,
                       hspec
  default-language:    Haskell2010
