cabal-version: 3.0
name:                acronym
version:             1.7.0.11
synopsis:            Convert a phrase to its acronym.
description:         Techies love their TLA (Three Letter Acronyms)!
                       Help generate some jargon by writing a program that converts a long name like Portable Network Graphics to its acronym (PNG).
license:             MIT
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
category:            Text
build-type:          Simple
extra-source-files:  README.md
                      CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/exercism/haskell/tree/main/exercises/acronym

library
  exposed-modules:     Acronym
  source-dirs:         src
  ghc-options:
    - -Wall
  build-depends:
    - base >=4.7 && <5
    - text

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      Paths_acronym
  build-depends:
    - acronym
    - base >=4.7 && <5
    - hspec
  source-dirs:         test
  ghc-options:
    - -threaded
    - -rtsopts
    - -with-rtsopts=-N
