cabal-version: 3.0
name: bob
version: 1.4.0.10
synopsis: An exercise in responding.
description: An exercise in responding to input.
license: MIT
license-file: LICENSE
author: Your Name
maintainer: your.email@example.com
category: Exercises
build-type: Simple
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/example/bob

library
  exposed-modules:
    Bob
  source-dirs: src
  ghc-options: -Wall
  build-depends:
    base >=4.7 && <5
    text

test-suite test
  main-is: Tests.hs
  type: exitcode-stdio-1.0
  source-dirs: test
  ghc-options: -Wall
  build-depends:
    base >=4.7 && <5
    bob
    hspec
