name:                diamond
version:             1.1.0.6
synopsis:            Generates a diamond shape from a letter.
-- description:
homepage:            https://github.com/exercism/haskell/tree/main/exercises/diamond
license:             MIT
license-file:        LICENSE

author:              Your Name
maintainer:          your.email@example.com
copyright:           2024 Your Name

category:            Exercises
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Diamond
  source-dirs:         src
  ghc-options:         -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:       base >=4.7 && <5
                       , text
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      Paths_diamond
  build-depends:
      base >=4.7 && <5
    , diamond
    , hspec
    , QuickCheck
    , text
    , string-conversions
  hs-source-dirs: test
  ghc-options:         -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
