name:                nth-prime
version:             2.1.0.6
synopsis:            Find the nth prime number
-- description:
homepage:            https://github.com/example/nth-prime

license:             BSD3
license-file:        LICENSE

author:              Your Name
maintainer:          your.email@example.com

-- copyright:
category:            Math
build-type:          Simple
cabal-version:       >= 2.0

library
  exposed-modules:     Prime

  -- other-modules:
  other-extensions:    NoImplicitPrelude, OverloadedStrings

  build-depends:       base >=4.7 && <5,
                       containers

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Tests.hs
  build-depends: base, hspec, nth-prime
