name: isogram
version: 1.7.0.8
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules: Isogram
  build-depends: base >= 4.7 && < 5,
                 text
  hs-source-dirs: src
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  build-depends: base >= 4.7 && < 5,
                 isogram,
                 hspec
  hs-source-dirs: test
  default-language: Haskell2010
